Second Commit.  Program functional.
Front end and back end logic is written and sound.  Very little styling in terms of CSS on this page thus far.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,20 @@
   margin-left: 6px;
 }
 
+#receipt {
+  border: solid #000 2px;
+  display: none;
+}
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+h3 {
+  text-align: center;
+}
+
 /* IMPORTED STYLESHEET */
 
 .btn {
